# react-agent

./: .codiumai.toml  .gitignore  .repomixignore  README.md  download_nltk_data.py  get_nltk.py  langgraph.json  llm-client.md  llm.py  mypy.ini  nltk_old.py  pyproject.toml  pytest.ini  repomix-output.xml  repomix.config.json  rules.json
.cursor/rules/: langchain.mdc  langgraph.mdc  openai.mdc
docs/: README.md  derivation_tools.md  langgraph-tool-calling.md  langgraph_rules.md  search_improvements.md
examples/: derivation_tools_example.py
src/react_agent/: __init__.py  configuration.py  types.py
src/react_agent/graphs/: analysis.py  error.py  graph.py  research.py
src/react_agent/prompts/: __init__.py  analysis.py  enhanced_templates.py  market.py  query.py  reflection.py  research.py  synthesis.py  templates.py  validation.py
src/react_agent/tools/: __init__.py  derivation.py  firecrawl.py  jina.py
src/react_agent/utils/: __init__.py  cache.py  content.py  defaults.py  enhanced_search.py  extraction.py  llm.py  logging.py  search.py  statistics.py  validations.py
tests/: conftest.py  test_enhanced_search.py
tests/integration_tests/: test_prompt_extraction_integration.py  test_response_handling.py
tests/unit_tests/: test_configuration.py  test_extraction.py
tests/unit_tests/tools/: test_derivation.py  test_jina.py
tests/unit_tests/utils/: test_cache.py  test_content.py  test_extraction.py  test_llm.py  test_statistics.py
